Bug 152325 - Autofilter Show/Hide only the current item doesn't work
Summary: Autofilter Show/Hide only the current item doesn't work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: bibisected, bisected, regression
: 152316 (view as bug list)
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2022-11-30 20:55 UTC by raal
Modified: 2022-12-09 12:17 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2022-11-30 20:55:22 UTC
Description:
GTK3 only issue, works in GEN vcl plugin

Steps to Reproduce:
open https://bugs.documentfoundation.org/attachment.cgi?id=183913
click on filter on column B
click "Show only the current item" or "Hide only the current item" buttons

Actual Results:
selection change

Expected Results:
nothing happens


Reproducible: Always


User Profile Reset: No

Additional Info:
.
Comment 1 raal 2022-11-30 21:01:48 UTC
This seems to have begun at the below commit.
Adding Cc: to Balazs Varga ; Could you possibly take a look at this one?
Thanks
 de830bca421d39b7ca9d24cc281cfe9c135c881d is the first bad commit
commit de830bca421d39b7ca9d24cc281cfe9c135c881d
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Jul 29 18:47:19 2022 +0200

    source 7321db3cadc8c0e4437ca04e5dcb652734ea9c26

https://gerrit.libreoffice.org/c/core/+/137558
Comment 2 Gabor Kelemen (Collabora) 2022-12-01 13:27:37 UTC
Correct example file is attachment 183914 [details]

Confirming behavior in
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ebe151d919a454f98c36013245bca9eb41d92707
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 3 Gabor Kelemen (Collabora) 2022-12-01 13:29:06 UTC
Bibisect result is

Related tdf#117276 sc: Show hidden filter elements as inactive elements
Comment 4 Gabor Kelemen (Collabora) 2022-12-01 13:32:09 UTC
Hm, how is this different than bug 152316?
Comment 5 Gabor Kelemen (Collabora) 2022-12-08 11:06:53 UTC
(In reply to Gabor Kelemen (allotropia) from comment #4)
> Hm, how is this different than bug 152316?

Ok, now I see, that one is about 7.4, it is differently broken there than in 7.5.
But only in GTK backend.

Caolán, you did some work in the GTK part of bug #117276, can you take a look here?
Comment 6 Caolán McNamara 2022-12-08 12:05:59 UTC
*** Bug 152316 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2022-12-08 13:58:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/417f6fde55a7fa59f27aa9a79132e5b2cc615270

Resolves: tdf#152325 initial "select" may not set the cursor to that pos

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2022-12-08 13:59:12 UTC
done in trunk, backport to 7-4 in gerrit
Comment 9 Commit Notification 2022-12-08 16:36:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/a52335fd454ca23db5969f661dc7cf8b22bbbfeb

Resolves: tdf#152325 initial "select" may not set the cursor to that pos

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Kamil Páral 2022-12-09 12:17:21 UTC
Verified fixed here:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 95a3d7733c5b48c99b2b74b06c7eeee718fdcd03
CPU threads: 12; OS: Linux 6.0; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

and also here:

Version: 7.4.4.0.0+ / LibreOffice Community
Build ID: b4d491808b65188f342a5ab25b893156b285deab
CPU threads: 12; OS: Linux 6.0; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Thanks everyone.