Resolves: tdf#152325 initial "select" may not set the cursor to that pos

but setting the cursor will 'select' for the default "single" selection
mode.

Change-Id: Ib7c3dfcce72bad69741b5bc3eb159a6ed3bc8142
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143817
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>